fix: Close HttpResponse in AbstractMethod (#549)
* fix: Close HttpResponse in AbstractMethod

* refactor: Add RedactResponseException

* chore: Bump version

* docs: Complete Javadocs for VonageClient